# arm

arm_description/: CMakeLists.txt
arm_description/install/: local_setup.sh  setup.ps1  setup.sh
arm_description/install/arm_description/share/arm_description/: local_setup.sh  package.sh
arm_description/install/arm_description/share/arm_description/launch/: display.launch
arm_description/install/arm_description/share/arm_description/meshes/: 4390N154_Flanged_Ultra-Thin_Ball_Bearing_2_1_1.stl  4390N154_Flanged_Ultra-Thin_Ball_Bearing__1__1_1.stl  7806K757_Thrust_Ball_Bearing_1_1.stl  Component2_1_1_1.stl  Component43_1_1.stl  Iteration_1_v5_1_1_1.stl  Linear_Actuator_v3_1_1_1.stl  Linear_Actuator_v3__1__1_1_1.stl  Movable_Claw_1_1.stl  base_link.stl
arm_description/install/arm_description/share/arm_description/urdf/: Arm.xacro
arm_description/launch/: controller.launch  controller.yaml  gazebo.launch
arm_description/log/: latest_build
arm_description/meshes/: 4390N154_Flanged_Ultra-Thin_Ball_Bearing_1_1.stl  97783A180_Fast-Travel_Ultra-Precision_Lead_Screw_1_1.stl  Component16_1_1_1.stl  Component18_1_1_1.stl  Component3_1_1.stl  Component43_2_1.stl  Component4_1_1_1.stl  Component5_1_1_1.stl  KFL08_-_Mancal_Flange_oval_Э8_v1_1_1_1.stl  Lead_Screw_Mount_1_1_1.stl  SAR_base_v5_1_1_1.stl  Shaft_Coupler_1_1_1.stl  lower_link_v39_1_1.stl  upperlink-updated_v4_1_1.stl
arm_description/urdf/: Arm.gazebo  Arm.trans  Arm.urdf  Arm.xacro
arm_description/urdf/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
arm_description/urdf/log/: latest_build
(+27 files in other folders)
